src/core/styles/components/grid-summary/_grid-summary-theme.scss
////
/// @group themes
/// @access public
/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
/// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
////
/// @param {Color} $background-color [null] - The summaries background color.
/// @param {Color} $label-color [null] - The summaries label color.
/// @param {Color} $result-color [null] - The summaries value/result color.
/// @param {Color} $border-color [null] - The summaries border color.
/// @param {Color} $inactive-color [null] - The summaries inactive label color color.
///
/// @example scss Change the summaries background nad labels color
///   $my-summary-theme: igx-grid-summary-theme(
///     $background-color: black,
///     $label-color: white
///   );
///   // Pass the theme to the igx-grid-filtering component mixin
///   @include igx-grid-summary($my-summary-theme);

@function igx-grid-summary-theme(
    $background-color: null,
    $label-color: null,
    $result-color: null,
    $border-color: null,
    $pinned-border-width: null,
    $pinned-border-style: null,
    $pinned-border-color: null,
    $inactive-color: null,
    $label-hover-color: null
) {
    @return (
        background-color: $background-color,
        label-color: $label-color,
        result-color: $result-color,
        border-color: $border-color,
        pinned-border-width: $pinned-border-width,
        pinned-border-style: $pinned-border-style,
        pinned-border-color: $pinned-border-color,
        inactive-color: $inactive-color,
        label-hover-color: $label-hover-color
    );
}

/// @param {Map} $theme - The theme used to style the component.
/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
/// @requires igx-grid-summary-theme
/// @requires igx-color

@mixin igx-grid-summary($theme, $palette: $default-palette) {
    $default-theme: igx-grid-summary-theme(
        $background-color: rgba(0, 0, 0, .02),
        $label-color: igx-color($palette, 'primary', 500),
        $label-hover-color: igx-color($palette, 'primary', 700),
        $result-color: igx-color($palette, 'grays', 800),
        $border-color: igx-color($palette, 'grays', 400),
        $pinned-border-width: 2px,
        $pinned-border-style: solid,
        $pinned-border-color: igx-color($palette, 'grays', 400),
        $inactive-color: igx-color($palette, 'grays', 400)
    );

    $this: extend($default-theme, $theme);

    $cell-pin: (
        style: map-get($this, 'pinned-border-width') map-get($this, 'pinned-border-style'),
        color: map-get($this, 'pinned-border-color')
    );

    %igx-grid-summary {
        display: flex;
        flex-direction: column;
        border-left: 1px dotted map-get($this, 'border-color');
        flex: 1 1 0%;
        padding: 0 rem(24px);

        &:first-of-type {
            border-left: 0;
        }
    }

    %igx-grid-summary--pinned {
        position: relative;
        background-color: inherit;
        z-index: 1;
    }

    %grid-summary--fixed-width {
        flex-grow: 0;
    }

    %igx-grid-summary--pinned-last {
        border-right: map-get($cell-pin, 'style') map-get($cell-pin, 'color');
    }

    %igx-grid-summary--empty {
        border-left: 1px dotted map-get($this, 'border-color');
    }

    %igx-grid-summary__item {
        display: flex;
        align-items: center;
        padding: rem(5px) 0;
        font-size: rem(12px);
        position: relative;
    }

    %igx-grid-summary__label {
        color: map-get($this, 'label-color');
        cursor: pointer;

        &:hover {
            color: map-get($this, 'label-hover-color');
        }
    }

    %igx-grid-summary__result {
        color: map-get($this, 'result-color');
        font-weight: 800;
        flex: 1 1 auto;
        text-align: right;
    }

    %igx-grid-summary__item--inactive {
        %igx-grid-summary__label {
            color: map-get($this, 'inactive-color');
        }

        %igx-grid-summary__result {
            display: none;
        }
    }

    %igx-grid-summary__label,
    %igx-grid-summary__result {
        @include ellipsis();
    }
}

